ICE-11270 added the following improvements and features: - fixed issue with all day event checkbox not resetting when pressing the reset button - rearranged reset button in sidebar details and added whitespace - fixed issues in selection navigation control not taking to the selected date - fix to make the selection navigation datepicker to start in the current month - added bundle messages for month, week, day, Reset - fixed issue with reset button appearing in tooltip - added different constructors for ScheduleEvent class to ease event creation
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces4@51995 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/trunk/icefaces/ace/component/resources/icefaces.ace/schedule/schedule.css
+++ b/trunk/icefaces/ace/component/resources/icefaces.ace/schedule/schedule.css
@@ -212,6 +212,9 @@
 	display: block;
 	margin-top: 5px;
 }
+.ice-ace-schedule .schedule-sidebar .schedule-details-sidebar-content > button {
+	margin-right: 5px;
+}
 .ice-ace-schedule .schedule-sidebar .schedule-details-sidebar-content > span > span > span {
 	display: block;
 }
